z-index fix for navbar/input bar -- Comments were over the box shadow

--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -19,6 +19,7 @@
   grid-auto-columns: auto 1fr;
   grid-gap: $magic-number;
   justify-items: end;
+  z-index: 1;
   .logo img {
     max-height: $magic-number * 7;
     margin-right: $magic-number;
@@ -64,6 +65,7 @@
   align-content: center;
   grid-gap: $magic-number * 2;
   grid-template-columns: 1fr auto;
+  z-index: 1;
 }
 
 .sidebar.closed {
